--- a/lib/assets/editor_cell/main.css
+++ b/lib/assets/editor_cell/main.css
@@ -1,4 +1,3 @@
-
 .app {
   font-family: "Inter";
 
@@ -266,15 +265,20 @@ select.input {
   transform: translateX(100%);
 }
 
-.switch-button-checkbox:checked + .switch-button-bg {
+.switch-button-checkbox:checked+.switch-button-bg {
   background-color: var(--blue-600);
 }
 
-/* .graphiql-container,
-.graphiql-editor {
+.graphiql-main,
+.graphiql-sessions,
+.graphiql-session,
+.graphiql-editor,
+.graphiql-query-editor,
+.graphiql-query-editor-wrapper,
+.flex-row-110,
+.flex-row-310 {
   height: auto;
   min-height: 20rem;
   max-height: 50rem;
-  max-width: 20rem;
-  overflow-y: auto; */
-/* } */
+  overflow-y: auto;
+}
