The one where Billy tries to get styles working (#8)
* so close...

* working styles (I think)

--- a/lib/assets/editor_cell/main.css
+++ b/lib/assets/editor_cell/main.css
@@ -1,4 +1,3 @@
-
 .app {
   font-family: "Inter";
 
@@ -266,15 +265,14 @@ select.input {
   transform: translateX(100%);
 }
 
-.switch-button-checkbox:checked + .switch-button-bg {
+.switch-button-checkbox:checked+.switch-button-bg {
   background-color: var(--blue-600);
 }
 
-/* .graphiql-container,
-.graphiql-editor {
+.graphiql-query-editor,
+.graphiql-query-editor-wrapper {
   height: auto;
   min-height: 20rem;
   max-height: 50rem;
-  max-width: 20rem;
-  overflow-y: auto; */
-/* } */
+  overflow-y: auto;
+}
